# 2025-Magica

./: CMakeLists.txt  README.md  battle.c  battle.h  data.c  data.h  main.c  print.c  print.h  save_load.c  save_load.h
